# SimuladorHabitacao

./: !a_corrigir.txt  .gitignore  CMakeLists.txt  README.md  grupo.txt  relatorio.docx  ~$latorio.docx  ~WRL3580.tmp
lib/: Terminal.cpp  Terminal.h
src/: main.cpp
src/Aparelhos/: Aparelho.cpp  Aparelho.h  AquecedorAparelho.cpp  AquecedorAparelho.h  AspersorAparelho.cpp  AspersorAparelho.h  LampadaAparelho.cpp  LampadaAparelho.h  RefrigeradorAparelho.cpp  RefrigeradorAparelho.h
src/Habitacao/: Habitacao.cpp  Habitacao.h
src/Habitacoes/: GestorHabitacao.cpp  GestorHabitacao.h  Habitacao.cpp  Habitacao.h
src/Interface/: Interface.cpp  Interface.h
src/Processadores/: EntreRegra.cpp  EntreRegra.h  ForaRegra.cpp  ForaRegra.h  IgualRegra.cpp  IgualRegra.h  MaiorRegra.cpp  MaiorRegra.h  MenorRegra.cpp  MenorRegra.h  ProcessadorRegras.cpp  ProcessadorRegras.h  Regra.cpp  Regra.h
src/Propriedades/: Fumo.cpp  Fumo.h  Humidade.cpp  Humidade.h  Luz.cpp  Luz.h  Propriedade.cpp  Propriedade.h  Radiacao.cpp  Radiacao.h  Som.cpp  Som.h  Temperatura.cpp  Temperatura.h  Vibracao.cpp  Vibracao.h
src/Sensores/: FumoSensor.cpp  FumoSensor.h  HumidadeSensor.cpp  HumidadeSensor.h  LuminosidadeSensor.cpp  LuminosidadeSensor.h  MovimentoSensor.cpp  MovimentoSensor.h  RadiacaoSensor.cpp  RadiacaoSensor.h  Sensor.cpp  Sensor.h  SomSensor.cpp  SomSensor.h  TemperaturaSensor.cpp  TemperaturaSensor.h
src/Terreno/: Terreno.cpp  Terreno.h
src/Zonas/: Zona.cpp  Zona.h
